DE3299 - Input shadow on iOS Add local style to fix shadow on searchbar input field. Only visible in iOS.

--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -724,3 +724,13 @@ search-local {
     }
   }
 }
+
+
+
+
+// Searchbar text shadow fix for iOS
+.input-group {
+  .form-control {
+    -webkit-appearance: none;
+  }
+}
